# watcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 09c9f5922650_add_snapshots_snapshot_chunks_and_.py  43ed48a9bd11_change_content_type_to_varchar20.py  5ffcb2894ab6_create_watches_and_audit_log_tables.py  71349ff5f740_add_notification_configs_table.py  78bc87fb6225_add_temporal_profiles_table.py  9ea381c8ff08_add_last_checked_at_to_watches.py  a1b2c3d4e5f6_add_cascade_delete_to_watch_fks.py  f0083c076bea_add_cascade_delete_to_watch_fks.py
docs/: COMMANDS.md  SKILLS.md
docs/plans/: 2026-03-20-phase1-foundation.md  2026-03-20-phase2-content-pipeline.md  2026-03-20-phase3-fetching-scheduling.md  2026-03-20-url-change-monitoring-design.md  2026-03-21-phase4-temporal-profiles.md  2026-03-21-phase5-changes-api.md  2026-03-21-phase6-notifications.md  2026-03-21-phase8-dashboard-design.md  2026-03-22-delete-watch-endpoint.md  2026-03-22-phase8a-dashboard-foundation.md  2026-03-22-phase8b-watch-management.md  2026-03-22-phase8c-change-detail-audit-system.md
scripts/: build-css.sh  check-css.sh
skills/brainstorming/: SKILL.md
skills/reviewing-code-claude/: SKILL.md
skills/reviewing-code-claude/scripts/: gather-context.sh
skills/shipping-work-claude/: SKILL.md
skills/shipping-work-claude/scripts/: check-status.sh  close-issue.sh  comment-issue.sh  pre-ship.sh  push.sh
skills/writing-plans/: SKILL.md
src/api/: dependencies.py  main.py
src/api/routes/: audit_log.py  changes.py  helpers.py  notification_configs.py  temporal_profiles.py  watches.py
src/api/schemas/: audit_log.py  change.py  notification_config.py  temporal_profile.py  types.py  watch.py
src/core/: database.py  differ.py  logging.py  rate_limiter.py  scheduler.py  simhash.py  storage.py
src/core/extractors/: __init__.py  base.py  csv_excel.py  html.py  pdf.py
src/core/fetchers/: __init__.py  base.py  http.py
src/core/models/: __init__.py  audit_log.py  base.py  change.py  notification_config.py  snapshot.py  temporal_profile.py  watch.py
src/core/notifications/: __init__.py  base.py  dispatcher.py  email.py  slack.py  webhook.py
src/dashboard/: __init__.py  context.py  routes.py
src/dashboard/static/css/: input.css
src/dashboard/static/js/: app.js
src/dashboard/templates/: base.html
src/dashboard/templates/pages/: audit_log.html  change_detail.html  dashboard.html  system.html  watch_detail.html  watch_form.html  watches.html
src/workers/: __init__.py  tasks.py
tests/: conftest.py
tests/api/: test_audit_log.py  test_changes.py  test_notification_configs.py  test_schemas.py  test_temporal_profiles.py  test_watches.py
tests/core/: test_differ.py  test_models.py  test_rate_limiter.py  test_scheduler.py  test_simhash.py  test_storage.py
tests/core/extractors/: test_base.py  test_csv_excel.py  test_html.py  test_pdf.py
tests/core/fetchers/: test_http.py
tests/core/notifications/: __init__.py  test_base.py  test_dispatcher.py  test_email.py  test_slack.py  test_webhook.py
tests/dashboard/: test_context.py  test_routes.py
tests/fixtures/: sample.html
tests/workers/: test_tasks.py
(+10 files in other folders)
