[project]
name = "watcher"
version = "0.1.0"
description = "Web service for monitoring cannabis industry activity: licenses, regulatory filings, compliance events, and entity relationships."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "python-ulid>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0",
    "pypdf>=5.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests that hit live external services; excluded by default (run with -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["vendor/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
